# xiaoxiaoyi-after-sales-chatbot

./: .gitignore  PROJECT_KNOWLEDGE_FOR_INTERVIEW.md  README.md  WECHAT_SETUP.md  app_database.py  learning_store.py  main.py  model_provider.py  prepare_chroma.py  pyproject.toml  smoke_test.py  wechat_server.py
docs/: after_sales_policy.txt  after_sales_process.txt  faq.txt  orders_and_logistics.txt
